==2011-05==
* Implemented available port label and location
* Added support for canvas delete commands
* Modified State: to Format: and Type: label for emulation item disk images and ports
* Added emulation window available port group
* Added emulation window available port status message
* Verified and checked dragging for all cases
* Improved ROM so it is saved if the ROM resides in the emulation
* Added donation window
* Implemented canvas copy with glReadPixels
* Implemented canvas printing
* Disabled printing for emulation window
* Improved CanvasView so it updates the canvas on initialization
* Improved device mount logic: all storages are first tried for available, if none is available, the first is selected for remounting
* Implemented multi-storage devices
* Improved overlay
* Improved OpenGLCanvas configuration logic
* Implemented paper canvas postImage
* Implemented OEImage overlay and clipping
* Implemented paper canvas update when paper size changes
* Fixed paper canvas size getting stuck
* Implemented CanvasView paper scrolling
* Defined paper vertical clip region
* Added OpenGL paper canvas page separator
* Updated device count in emulation window
* Fixed PAAudio when playing a sound twice
* Fixed OpenGL paper canvas borders
* Implemented OpenGL paper canvas pixel density
* Finished OpenGL paper canvas
* Fixed video update when shaders are off
* Fixed resize flickering when using didVSync for drawing
* Fixed bezel drawing
* Fixed window resizing methods
* Fixed display canvas updates, so persistency is correctly updated after a new frame
* Implemented OpenGL paper canvas
* Added paper canvas to CanvasWindowController and CanvasWindow
* Refactored canvas API

==2011-04==
* Fixed bezel 180 degree rotation
* Fixed persistance
* Fixed OpenGLCanvas update parameters and canvas API
* Fixed OpenGL context loss when closing a canvas
* Fixed GUI-Emulation-Canvas thread synchronization