@@ -1,8 +1,6 @@
 ==To-Do==
 * Fix printing
 
-* Enable disclosure triangle for AVAILABLE PORTS and hide by default
-
 * Implement hardware library
 * Implement device dragging to the emulation window by checking testAddEDL
 * Implement OEEmulation testAddEDL
@@ -12,8 +10,7 @@
 * Implement removal of devices in a daisy chain (when port and connector are of the same kind)
 
 * Fix: resize flickering
-* Fix: paper canvas is sometimes not showing. The canvas image is all white. How come?
-* CanvasWindow in fullscreen mode should have multiple display sizes
+* CanvasWindow in fullscreen mode could have multiple display sizes
 * Implement disk image file locking, if the disk image is writable (flock)
 
 ==Future to-do's==
