@@ -14,7 +14,7 @@
 
 @implementation EmulationOutlineView
 
-- (id) initWithCoder:(NSCoder *)decoder
+- (id)initWithCoder:(NSCoder *)decoder
 {
 	if ((self = [super initWithCoder:decoder]))
 	{
@@ -119,7 +119,12 @@
 	EmulationItem *item = [self itemAtRow:rowIndex];
 	float indentation;
 	if ([item isGroup])
-		indentation = 6.0;
+	{
+		if ([[item label] compare:@"AVAILABLE PORTS"] == NSOrderedSame)
+			indentation = 18.0;
+		else
+			indentation = 6.0;
+	}
 	else if ([item isMount])
 		indentation = 32.0;
 	else
@@ -133,6 +138,11 @@
 
 - (NSRect)frameOfOutlineCellAtRow:(NSInteger)row
 {
+	EmulationItem *item = [self itemAtRow:row];
+	if ([item isGroup] &&
+		[[item label] compare:@"AVAILABLE PORTS"] == NSOrderedSame)
+		return [super frameOfOutlineCellAtRow:row];
+	
 	return NSZeroRect;
 }
 
