@@ -4,15 +4,15 @@
 
 <device id="c64" label="C64" image="images/Commodore/Commodore 64.png" group="system">
 </device>
-<port id="c64.video" ref="" type="Composite Video" label="Video Port" image="">
+<port id="c64.video" ref="" type="Composite Video" label="Video Port" image="images/Generic/RCA Female.png">
 </port>
-<port id="c64.control1" ref="" type="Commodore 64 Control" label="Control Port 1" image="">
+<port id="c64.control1" ref="" type="Commodore 64 Control" label="Control Port 1" image="images/Generic/DB9 Male.png">
 </port>
-<port id="c64.control2" ref="" type="Commodore 64 Control" label="Control Port 2" image="">
+<port id="c64.control2" ref="" type="Commodore 64 Control" label="Control Port 2" image="images/Generic/DB9 Male.png">
 </port>
 <port id="c64.expansion" ref="" type="Commodore 64 Expansion" label="Expansion Port" image="">
 </port>
-<port id="c64.serial" ref="" type="IEEE488" label="Serial Port" image="">
+<port id="c64.serial" ref="" type="IEEE-488" label="Serial Port" image="">
 </port>
 <port id="c64.cassette" ref="" type="Commodore 64 Cassette" label="Cassette Port" image="">
 </port>
